--- a/demos/1.9-ci/values.yaml
+++ b/demos/1.9-ci/values.yaml
@@ -22,6 +22,8 @@ global:
         disabled: false
       - package: ./dynamic-plugins/dist/backstage-community-plugin-acr
         disabled: false
+      - package: ./dynamic-plugins/dist/backstage-plugin-scaffolder-backend-module-github-dynamic
+        disabled: false
 
 upstream:
   backstage:
@@ -100,12 +102,12 @@ upstream:
           - it
           - ja
           - ko
-          - en-US
-          - en-IN
-          - en-UK
-          - zh
-          - pt-BR
-          - zh-CN
+          # - en-US
+          # - en-IN
+          # - en-UK
+          # - zh
+          # - pt-BR
+          # - zh-CN
         overrides:
           - /translations/allTranslations.json
 
@@ -117,6 +119,14 @@ upstream:
             target: https://github.com/christoph-jerolimov/rhdh-experiments/blob/main/catalog/all.yaml
             rules:
               - allow: [Component, System, API, Resource, Location, User, Group]
+          - type: url
+            target: https://github.com/backstage/community-plugins/blob/main/workspaces/scaffolder-backend-module-annotator/plugins/scaffolder-backend-module-annotator/examples/templates/01-scaffolder-template.yaml
+            rules:
+              - allow: [Template]
+          - type: url
+            target: https://github.com/backstage/community-plugins/blob/main/workspaces/scaffolder-backend-module-annotator/plugins/scaffolder-backend-module-annotator/examples/templates/02-scaffolder-template.yaml
+            rules:
+              - allow: [Template]
 
       dynamicPlugins:
         frontend:
