--- a/prs/4085-scaffolder-annotator/values.yaml
+++ b/prs/4085-scaffolder-annotator/values.yaml
@@ -1,21 +1,16 @@
 global:
   dynamic:
     plugins:
-      - package: ./dynamic-plugins/dist/red-hat-developer-hub-backstage-plugin-bulk-import
+      - package: ./dynamic-plugins/dist/backstage-plugin-scaffolder-backend-module-github-dynamic
         disabled: false
-      - package: ./dynamic-plugins/dist/red-hat-developer-hub-backstage-plugin-bulk-import-backend-dynamic
-        disabled: false
-        pluginConfig:
-          bulkImport:
-            importAPI: open-pull-requests
 
 upstream:
   backstage:
     image:
       registry: quay.io
       repository: rhdh-community/rhdh
-      tag: pr-3597
-      pullPolicy: IfNotPresent
+      tag: pr-4085
+      pullPolicy: Always
 
     appConfig:
       catalog:
@@ -26,6 +21,22 @@ upstream:
             target: https://github.com/christoph-jerolimov/rhdh-experiments/blob/main/catalog/all.yaml
             rules:
               - allow: [Component, System, API, Resource, Location, User, Group]
+          - type: url
+            target: https://github.com/christoph-jerolimov/rhdh-experiments/blob/main/features/github/catalog.yaml
+            rules:
+              - allow: [Component, System, API, Resource, Location, User, Group]
+          - type: url
+            target: https://github.com/redhat-developer/rhdh/blob/main/catalog-info.yaml
+          - type: url
+            target: https://github.com/redhat-developer/rhdh-cli/blob/main/catalog-info.yaml
+          - type: url
+            target: https://github.com/backstage/community-plugins/blob/main/workspaces/scaffolder-backend-module-annotator/plugins/scaffolder-backend-module-annotator/examples/templates/01-scaffolder-template.yaml
+            rules:
+              - allow: [Template]
+          - type: url
+            target: https://github.com/backstage/community-plugins/blob/main/workspaces/scaffolder-backend-module-annotator/plugins/scaffolder-backend-module-annotator/examples/templates/02-scaffolder-template.yaml
+            rules:
+              - allow: [Template]
 
       i18n:
         locales:
