--- a/demos/1.9-testday/values.yaml
+++ b/demos/1.9-testday/values.yaml
@@ -19,6 +19,10 @@ global:
         disabled: false
       - package: ./dynamic-plugins/dist/backstage-plugin-scaffolder-backend-module-github-dynamic
         disabled: false
+      - package: ./dynamic-plugins/dist/backstage-plugin-notifications
+        disabled: false
+      - package: ./dynamic-plugins/dist/backstage-plugin-notifications-backend-dynamic
+        disabled: false
 
 upstream:
   backstage:
@@ -115,6 +119,10 @@ upstream:
               - allow: [Template]
           - type: url
             target: https://github.com/backstage/community-plugins/blob/main/workspaces/scaffolder-backend-module-annotator/plugins/scaffolder-backend-module-annotator/examples/templates/02-scaffolder-template.yaml
+            rules:
+              - allow: [Template]
+          - type: url
+            target: https://github.com/christoph-jerolimov/rhdh-experiments/blob/main/demos/1.9-testday/template.yaml
             rules:
               - allow: [Template]
 
@@ -352,6 +360,11 @@ upstream:
               - name: user:default/christoph-jerolimov
             users:
               - name: user:default/rhdh-qe
+
+      scaffolder:
+        notifications:
+          templateUpdate:
+            enabled: true
 
   # reduce memory usage
   postgresql:
