--- a/demos/1.9-testday/values.yaml
+++ b/demos/1.9-testday/values.yaml
@@ -19,6 +19,8 @@ global:
         disabled: false
       - package: ./dynamic-plugins/dist/backstage-plugin-scaffolder-backend-module-github-dynamic
         disabled: false
+      - package: ./dynamic-plugins/dist/backstage-community-plugin-catalog-backend-module-scaffolder-relation-processor-dynamic
+        disabled: false
       - package: ./dynamic-plugins/dist/backstage-plugin-notifications
         disabled: false
       - package: ./dynamic-plugins/dist/backstage-plugin-notifications-backend-dynamic
