--- a/demos/1.9-testday/template.yaml
+++ b/demos/1.9-testday/template.yaml
@@ -38,3 +38,9 @@ spec:
       input:
         annotations:
           backstage.io/template-version: ${{ parameters.version }}
+    - action: fs:readdir
+      id: read-workdir
+      name: Read workspace directory
+      input:
+        paths:
+          - .
