--- a/demos/1.9-testday/template.yaml
+++ b/demos/1.9-testday/template.yaml
@@ -38,10 +38,10 @@ spec:
       input:
         annotations:
           backstage.io/template-version: ${{ parameters.version }}
-    # - action: github:repo:create
-    #   name: Create a new GitHub repository
-    #   input:
-    #     repoUrl: github.com?repo=${{ parameters.name }}&owner=christoph-jerolimov
+    - action: github:repo:create
+      name: Create a new GitHub repository
+      input:
+        repoUrl: github.com?repo=${{ parameters.name }}&owner=christoph-jerolimov
     - action: github:repo:push
       name: Create test repo with testuser as owner.
       input:
