--- a/demos/1.9-testday/template.yaml
+++ b/demos/1.9-testday/template.yaml
@@ -50,4 +50,4 @@ spec:
       id: register-with-catalog
       name: Register with the catalog
       input:
-        catalogInfoUrl: http://github.com/christoph-jerolimov/${{ parameters.name }}/blob/master/catalog-info.yaml
+        catalogInfoUrl: http://github.com/christoph-jerolimov/${{ parameters.name }}/blob/main/catalog-info.yaml
