--- a/demos/1.9-testday/values.yaml
+++ b/demos/1.9-testday/values.yaml
@@ -30,6 +30,51 @@ global:
       - package: ./dynamic-plugins/dist/backstage-plugin-notifications-backend-dynamic
         disabled: false
 
+      - package: oci://ghcr.io/redhat-developer/rhdh-plugin-export-overlays/red-hat-developer-hub-backstage-plugin-scorecard:bs_1.45.3__2.3.5!red-hat-developer-hub-backstage-plugin-scorecard
+        disabled: false
+        pluginConfig:
+          dynamicPlugins:
+            frontend:
+              red-hat-developer-hub.backstage-plugin-scorecard:
+                entityTabs:
+                  - path: "/scorecard"
+                    title: Scorecard
+                    mountPoint: entity.page.scorecard
+                mountPoints:
+                  - mountPoint: entity.page.scorecard/cards
+                    importName: EntityScorecardContent
+                    config:
+                      layout:
+                        gridColumn: 1 / -1
+                  - mountPoint: home.page/cards
+                    importName: ScorecardHomepageCard
+                    config:
+                      props:
+                        metricId: "jira.open_issues"
+                      layouts:
+                        xl: { w: 3, h: 6 }
+                        lg: { w: 4, h: 6 }
+                        md: { w: 6, h: 6 }
+                        sm: { w: 12, h: 6 }
+                        xs: { w: 12, h: 6 }
+                        xxs: { w: 12, h: 6 }
+                  - mountPoint: home.page/cards
+                    importName: ScorecardHomepageCard
+                    config:
+                      props:
+                        metricId: "github.open_prs"
+                      layouts:
+                        xl: { w: 3, h: 6, x: 3 }
+                        lg: { w: 4, h: 6, x: 4 }
+                        md: { w: 6, h: 6, x: 6 }
+                        sm: { w: 12, h: 6 }
+                        xs: { w: 12, h: 6 }
+                        xxs: { w: 12, h: 6 }
+      - package: oci://ghcr.io/redhat-developer/rhdh-plugin-export-overlays/red-hat-developer-hub-backstage-plugin-scorecard-backend:bs_1.45.3__2.3.5!red-hat-developer-hub-backstage-plugin-scorecard-backend
+        disabled: false
+      - package: oci://ghcr.io/redhat-developer/rhdh-plugin-export-overlays/red-hat-developer-hub-backstage-plugin-scorecard-backend-module-github:bs_1.45.3__2.3.5!red-hat-developer-hub-backstage-plugin-scorecard-backend-module-github
+        disabled: false
+
 upstream:
   backstage:
     extraVolumeMounts:
@@ -371,14 +416,3 @@ upstream:
         notifications:
           templateUpdate:
             enabled: true
-
-  # reduce memory usage
-  postgresql:
-    primary:
-      resources:
-        requests:
-          cpu: 250m
-          memory: 256Mi
-        limits:
-          cpu: 250m
-          memory: 256Mi
